--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "author": "",
   "license": "ISC",
   "jspm": {
-    "dependencies": {
-    },
+    "dependencies": {},
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
       "babel-runtime": "npm:babel-runtime@^5.8.24",
@@ -27,7 +26,14 @@
     "gulp-imagemin": "^2.4.0",
     "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0",
+    "jasmine-core": "^2.4.1",
     "jspm": "^0.16.22",
+    "karma": "^0.13.19",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-jasmine": "^0.3.6",
+    "karma-jspm": "^2.0.2",
+    "karma-phantomjs-launcher": "^0.2.3",
+    "phantomjs": "^1.9.19",
     "run-sequence": "^1.1.5"
   }
 }
